--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".MarshallActivity"/>
+
         <activity android:name = ".SimonActivity" />
     </application>
 
